--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/azfufkot/y513m" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/azfufkot/g11t" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/azfufkot/c12r" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/azfufkot/f8i" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/azfufkot/k4h" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/azfufkot/y12j" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/azfufkot/u3o" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/azfufkot/q10g" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/azfufkot/o9l" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/azfufkot/e7l" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/azfufkot/q5d" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/sufcxita/n513d" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/sufcxita/k11i" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/sufcxita/g12z" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/sufcxita/g8x" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/sufcxita/j4l" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/sufcxita/e12r" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/sufcxita/g3h" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/sufcxita/q10a" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/sufcxita/z9u" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/sufcxita/v7e" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/sufcxita/s5p" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/4/15/n12033990.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/download-84-320x200.jpg"><p align="center">【思想领袖】巴斯：击垮中共 美可一招制胜</p></a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/4/15/n12033990.md#1" title="【思想领袖】巴斯：击垮中共 美可一招制胜""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-84-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215183.md#1" title="沈舟：主动对抗中共 美国最新战略方向""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/000_1S17VD-320x200.jpg">&nbsp;</a>
@@ -13,10 +13,10 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12204829.md#1" title="【佳人传】一门皆风雅 沈宜修的诗意桃源""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Lady-book-cover-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213368.md#1" title="高天韵：美连出重拳打击中共 推动抗共大潮""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1TD9E9-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://pxdgi295.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215195.md#1">窃美公司商业机密 中国教授被判经济间谍罪</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215195.md#1">窃美公司商业机密 中国教授被判经济间谍罪</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/4/15/n12033990.md#1">【思想领袖】巴斯：击垮中共 美可一招制胜</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215250.md#1">【翻墙必看】中共政治局常委与美方交手失败</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215230.md#1">【美股瞭望】股市跌讯如天空中飘来几片乌云</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
